deploy/demo/service-catalog-frontend/service-catalog-frontend-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-catalog-frontend
  labels:
    app: service-catalog-frontend
spec:
  template:
    spec:
      containers:
        - name: service-catalog-frontend
