deploy/demo/service-catalog-frontend/service-catalog-frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-catalog-frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
spec:
  ingressClassName: nginx
  rules:
    - host: tjenestekatalogen.demo.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: service-catalog-frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
